# chatbot-api

./: .gitignore  1db.1sqlite3  db.sqlite3  pyproject.toml
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/authentication/: login.html
bot_messages/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bot_messages/migrations/: 0001_initial.py  0002_alter_botmessages_options_alter_botmessages_channel.py
bots/: admin.py  models.py  serializers.py  urls.py  views.py
bots/migrations/: 0001_initial.py  0002_delete_botchannels_alter_botsagent_options_and_more.py  0003_remove_botsagent_channels.py
channels/: admin.py  models.py  serializers.py  urls.py  views.py
channels/migrations/: 0001_initial.py
chatbot/: settings.py  urls.py
dashboard/: admin.py  models.py  serializers.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_botchannels_options_alter_botsagent_options_and_more.py  0002_remove_botmessages_channel_remove_botmessages_agent_and_more.py  0003_remove_botsagent_channels.py  0004_alter_botsagent_agent_id.py  0005_botsagent_agent_name.py  0006_botmessages.py  0007_botmessages_agent_botmessages_updated_at_and_more.py  0008_botshare.py
sharing/: admin.py  models.py  serializers.py  urls.py  views.py
sharing/migrations/: 0001_initial.py
